# tracker

./: .gitignore  ROADMAP.md
backend/: README.md  notebook.ipynb  pyproject.toml
backend/scripts/: generate_sqlite_file.py
backend/src/scripts/: generate_sqlite_file.py  restore_file.py
backend/src/tracker/: __main__.py  app.py  settings.py
backend/src/tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/src/tracker/db/fns/: __init__.py  _add_coding_attempt.py  _add_coding_problem.py  _add_coding_tag.py  _add_coding_tag_classic.py  _add_coding_tag_link.py  _delete_coding_tag.py  _exec.py  _get_all_coding_attempts.py  _get_all_coding_problems.py  _get_all_coding_tags.py  _get_coding_attempts.py  _get_coding_problem_map.py  _get_coding_tag_classics.py  _get_coding_tag_map.py  _get_latest_coding_attempts.py  _get_problem_ids_to_tag_ids.py  _get_problems_by_tag.py  _get_proficiency_by_tag.py  _get_proficiency_over_time.py  _remove_coding_tag.py  _remove_coding_tag_link.py  _remove_tag_classic.py  _tag_is_used.py
backend/src/tracker/db/models/: __init__.py  _coding_attempt.py
backend/src/tracker/db/utils/: __init__.py  _background_backup.py  _db_connection.py  _get_tag_delta.py  _parse_group_concat.py
backend/src/tracker/endpoints/v1/: __init__.py  _add_role.py  _delete_coding_tag.py  _get_all_tags.py  _get_coding_attempt_data.py  _get_coding_attempts.py  _get_coding_classics_by_tag.py  _get_latest_coding_attempts.py  _get_problems_by_tag.py  _get_proficiency_over_time.py  (+5 more)
backend/src/tracker/types/: __init__.py
backup/: bkup.sql
(+62 files in other folders)
