[project]
name = "tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.*",
    "more-itertools==10.*",
    "SQLAlchemy==2.*",
]

[project.scripts]
tracker = "tracker.__main__:main"

[dependency-groups]
dev = [
    "mypy==1.*",
    "ruff==0.*",
]
