[project]
name = "tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.123.*",
    "more-itertools==10.*",
    "SQLAlchemy==2.0.*",
    "uvicorn==0.38.*",
    "pydantic==2.12.*",
]

[project.scripts]
tracker = "tracker.__main__:main"

[dependency-groups]
dev = [
    "ipykernel==7.1.*",
    "mypy==1.*",
    "pydantic-settings==2.*",
    "requests==2.32.*",
    "ruff==0.*",
]
